cabal-version:      2.2
name:               ttc-examples
version:            1.2.0.0
synopsis:           TTC Examples
description:
  This package contains TTC examples.  Please see the README on GitHub at
  <https://github.com/ExtremaIS/ttc-haskell/tree/main/ttc-examples#readme>.
homepage:           https://github.com/ExtremaIS/ttc-haskell/tree/main/ttc-examples#readme
bug-reports:        https://github.com/ExtremaIS/ttc-haskell/issues
license:            MIT
license-file:       LICENSE
author:             Travis Cardwell <travis.cardwell@extrema.is>
maintainer:         Travis Cardwell <travis.cardwell@extrema.is>
copyright:          Copyright (c) 2019-2024 Travis Cardwell
category:           Data, Text
build-type:         Simple
extra-doc-files:    README.md

source-repository head
  type: git
  location: https://github.com/ExtremaIS/ttc-haskell.git

flag optparse-applicative_ge_0_18
  description: Use optparse-applicative 0.18 or newer
  default: True
  manual: False

flag ttc-example-invalid
  description: build ttc-example-invalid
  default: False
  manual: True

executable ttc-example-enum
  hs-source-dirs: enum
  main-is: enum.hs
  build-depends:
      base
    , ttc
  if flag(optparse-applicative_ge_0_18)
    build-depends:
        optparse-applicative >=0.18
      , prettyprinter
  else
    build-depends:
        ansi-wl-pprint
      , optparse-applicative <0.18
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

-- This example is not built by default because it provides an example of a
-- compile-time error.
executable ttc-example-invalid
  if flag(ttc-example-invalid)
    buildable: True
  else
    buildable: False
  hs-source-dirs: invalid
  main-is: invalid.hs
  other-modules:
      Username
  build-depends:
      base
    , template-haskell
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-lift
  hs-source-dirs: lift
  main-is: lift.hs
  other-modules:
      Username
  build-depends:
      base
    , template-haskell
    , text
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-mkvalid
  hs-source-dirs: mkvalid
  main-is: mkvalid.hs
  other-modules:
      Username
  build-depends:
      base
    , text
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-mkuvalid
  hs-source-dirs: mkuvalid
  main-is: mkuvalid.hs
  other-modules:
      Username
  build-depends:
      base
    , text
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-prompt
  hs-source-dirs: prompt
  main-is: prompt.hs
  other-modules:
      CreditCard
  build-depends:
      base
    , time
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-uname
  hs-source-dirs: uname
  main-is: uname.hs
  other-modules:
      Username
  build-depends:
      base
    , text
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-uvalidof
  hs-source-dirs: uvalidof
  main-is: uvalidof.hs
  other-modules:
      Username
  build-depends:
      base
    , text
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-mkuvalidqq
  hs-source-dirs: mkuvalidqq
  main-is: mkuvalidqq.hs
  other-modules:
      Username
  build-depends:
      base
    , text
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-valid
  hs-source-dirs: valid
  main-is: valid.hs
  other-modules:
      Username
  build-depends:
      base
    , template-haskell
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ttc-example-validof
  hs-source-dirs: validof
  main-is: validof.hs
  other-modules:
      Username
  build-depends:
      base
    , text
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
