cabal-version:      3.0
name:               ttc
version:            1.4.0.0
synopsis:           Textual Type Classes
description:
  This library provides type classes for conversion between data types and
  textual data types (strings).  Please see the README on GitHub at
  <https://github.com/ExtremaIS/ttc-haskell/tree/main/ttc#readme>.
homepage:           https://github.com/ExtremaIS/ttc-haskell/tree/main/ttc#readme
bug-reports:        https://github.com/ExtremaIS/ttc-haskell/issues
license:            MIT
license-file:       LICENSE
author:             Travis Cardwell <travis.cardwell@extrema.is>
maintainer:         Travis Cardwell <travis.cardwell@extrema.is>
copyright:          Copyright (c) 2019-2024 Travis Cardwell
category:           Data, Text
build-type:         Simple

extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.2
   || ==9.10.1

source-repository head
  type: git
  location: https://github.com/ExtremaIS/ttc-haskell.git

library
  hs-source-dirs: src
  exposed-modules:
      Data.TTC
  build-depends:
      base >=4.13.0.0 && <4.21
    , bytestring >=0.10.10.1 && <0.13
    , template-haskell >=2.15.0.0 && <2.23
    , text >=1.2.4.0 && <2.2
    , text-short >=0.1.3 && <0.2
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options: -Wall

test-suite ttc-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Data.TTC.Test
    , TestTypes.Ex
  build-depends:
      base
    , bytestring
    , tasty >=1.2.3 && <1.6
    , tasty-hunit >=0.10.0.3 && <0.11
    , template-haskell
    , text
    , text-short
    , ttc
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
